tests/ui-nightly/transmute-mut-dst-not-frombytes.stderr
error[E0277]: the trait bound `Dst: FromBytes` is not satisfied
  --> tests/ui-nightly/transmute-mut-dst-not-frombytes.rs:24:38
   |
24 | const DST_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `Dst`
   |
   = help: the following other types implement trait `FromBytes`:
             isize
             i8
             i16
             i32
             i64
             i128
             usize
             u8
           and $N others
note: required by a bound in `DST_NOT_FROM_BYTES::transmute`
  --> tests/ui-nightly/transmute-mut-dst-not-frombytes.rs:24:38
   |
24 | const DST_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                      |
   |                                      required by a bound in this function
   |                                      required by this bound in `transmute`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
